--- a/templates/index.html
+++ b/templates/index.html
@@ -17,65 +17,70 @@
   <title>선착순 공동구매</title>
 
   <style>
-* {
-font-family: 'Gowun Batang', serif;
-color: white;
-}
+        * {
+            font-family: 'Gowun Batang', serif;
+            color: white;
+        }
 
-body {
-background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.aitimes.com/news/photo/202010/132592_129694_3139.jpg');
-background-position: center;
-background-size: cover;
-}
+        body {
+            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://cdn.aitimes.com/news/photo/202010/132592_129694_3139.jpg');
+            background-position: center;
+            background-size: cover;
+        }
 
-h1 {
-font-weight: bold;
-}
+        h1 {
+            font-weight: bold;
+        }
 
-.order {
-width: 500px;
-margin: 60px auto 0px auto;
-padding-bottom: 60px;
-}
+        .order {
+            width: 500px;
+            margin: 60px auto 0px auto;
+            padding-bottom: 60px;
+        }
 
-.mybtn {
-width: 100%;
-}
+        .mybtn {
+            width: 100%;
+        }
 
-.order > table {
-margin : 40px 0;
-font-size: 18px;
-}
+        .order > table {
+            margin : 40px 0;
+            font-size: 18px;
+        }
 
-option {
-color: black;
-}
-</style>
-  <script>
-$(document).ready(function () {
-show_order();
-});
-function show_order() {
-$.ajax({
-type: 'GET',
-url: '/mars',
-data: {},
-success: function (response) {
-alert(response['msg'])
-}
-});
-}
-function save_order() {
-$.ajax({
-type: 'POST',
-url: '/mars',
-data: { sample_give:'데이터전송' },
-success: function (response) {
-alert(response['msg'])
-}
-});
-}
-</script>
+        option {
+            color: black;
+        }
+    </style>
+
+    <script>
+        $(document).ready(function () {
+            show_order();
+        });
+        function show_order() {
+            $.ajax({
+                type: 'GET',
+                url: '/mars',
+                data: {},
+                success: function (response) {
+                    alert(response['msg'])
+                }
+            });
+        }
+        function save_order() {
+               let name = $('#name').val()
+               let address = $('#address').val()
+               let size = $('#size').val()
+
+            $.ajax({
+                type: 'POST',
+                url: '/mars',
+                data: { sample_give:'데이터전송' },
+                success: function (response) {
+                    alert(response['msg'])
+                }
+            });
+        }
+    </script>
 </head>
 <body>
 <div class="mask"></div>
