아 정말 오탈자 확인 잘 하시라구요 ㅠㅠ 본인 ㅠㅠ

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,9 +74,12 @@
             $.ajax({
                 type: 'POST',
                 url: '/mars',
-                data: { sample_give:'데이터전송' },
+                data: { name_give: name,
+                 address_give: address,
+                 size_give: size},
                 success: function (response) {
                     alert(response['msg'])
+                    window.location.reload() // 새로고침
                 }
             });
         }
