orders // 콘솔창에 안뜸 ㅠㅠ

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,13 @@
                 url: '/mars',
                 data: {},
                 success: function (response) {
-                    alert(response['msg'])
+                         let rows = response['orders']
+                          for (let i = 0; i < rows.length; i++) {
+                              let name = rows[i]['name']
+                              let address = rows[i]['address']
+                              let size = rows[i]['size']
+                      }
+
                 }
             });
         }
